	  Other API changes for new quadrics libs.
	* Temporarily disable --with-rms and PAM support in qshd
	* Taggged pdsh-1-6-3chaos.

2002-06-03 garlick
	* Fixed a bug in dshbak which did not properly compress multi-digit
	  hostname suffixes.
	* Switch ChangeLog format.
	* Added a few test cases to deja-gnu.

2002-06-14 garlick
	* Moved list_split_range to hostrange.c (now called range_split)

2002-06-20 akeane@quadrics.com (via garlick)
	* configure.ac fix to find pthreads on OSF/TRU64.
	* Taggged pdsh-1-6-4chaos.

2002-07-22 grondona (via garlick)
	* Support HAVE_WORKING_STRERROR_R || STRERROR_R_CHAR_P
	  mail.gnu.org/pipermail/autoconf-patches/2001-October/007964.html

2002-08-10 addy@quadrics.com (via garlick)
	* Removed garlick's conditional support for new driver
	  (addy's changes below are more complete)
	* ELAN_CAPABILITY has had the Generation element name changed. 
	  This change should be backwards compatible to older headers.
	* libelan now requires ELAN_CAP_TYPE_BROADCASTABLE to be always set 
	  as it supports segmented broadcast.
	* The elan3_create() code needed work to sync up with the new ioctl 
	  based device interface.
	* The xinet.d/qshell script was trying to use a service call 'xshell'.
	  Changed to qshell to match the /etc/service entry.
	* Doing a 'service xinetd restart' seems to cause the daemon to die
	  shortly after starting when done with pdsh or prun. I changed it to
	  'reload' inside the specfile which seems safer.

2002-08-10 garlick
	* Broke TODO out of ChangeLog
	* Removed aborted attempt at QsNet cleanup (libqsw dir)
	* Added support for Mark's hostlist.[ch].
	* Added COPYING and added GPL headers to source modules.
	* Removed code that deleted unreachable hosts from the target list in
	  interactive mode.  This didn't work because we fork for each
	  round.  Got rid of -c option which was used to disable this behavior.
	  As this has not worked for a long time, probably won't be missed.
	* Taggged pdsh-1-7-1chaos