@@ -196,4 +196,5 @@
 	  interactive mode.  This didn't work because we fork for each
 	  round.  Got rid of -c option which was used to disable this behavior.
 	  As this has not worked for a long time, probably won't be missed.
+	* Handle arbitrarily large cap->Bitmap in qcmd/qshd protocol.
 	* Taggged pdsh-1-7-1chaos
